--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -8,7 +8,7 @@
         android:layout_height="280dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         app:cardElevation="10dp"
         android:layout_alignParentTop="true"
         app:cardPreventCornerOverlap="false"
