--- a/app/src/main/res/layout/right_content.xml
+++ b/app/src/main/res/layout/right_content.xml
@@ -1,73 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#DADDD8"
+              android:orientation="vertical"
               android:weightSum="1">
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-                    <android.support.v7.widget.Toolbar
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:background="@color/caidanColor"
-                        android:elevation="4dp"
-                        android:id="@+id/toolbar"
-                        >
-
-                        <Button
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:onClick="toggleMenu"
-                            android:background="@mipmap/menubutton"
-                            android:id="@+id/toogleButton"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="20sp"
-                            android:text="@string/TitleString"
-                            android:id="@+id/title"
-                            android:layout_marginBottom="10dp"
-                            android:layout_gravity="center_horizontal"
-                            />
-                        <Button
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:background="@mipmap/ok"
-                            android:layout_gravity="right"
-                            android:id="@+id/finish_bill"
-                            android:layout_marginRight="10dp"
-                            />
-                    </android.support.v7.widget.Toolbar>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.v4.widget.SwipeRefreshLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/swipe_layout"
-            android:layout_marginTop="27dp">
+            android:layout_height="35dp"
+            android:background="@color/caidanColor"
+            android:elevation="4dp"
+            >
 
-        <android.support.v7.widget.RecyclerView
+            <Button
+                android:id="@+id/toogleButton"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@mipmap/menubutton"
+                android:onClick="toggleMenu"
+                />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                android:text="@string/TitleString"
+                android:textSize="20sp"
+                />
+
+            <Button
+                android:id="@+id/finish_bill"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:background="@mipmap/ok"
+                />
+        </android.support.v7.widget.Toolbar>
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="27dp"
-            android:id="@+id/recycle_view">
-
-        </android.support.v7.widget.RecyclerView>
-
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-        <include layout="@layout/floatbutton_layout"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
 
-    </FrameLayout>
+
+            <include layout="@layout/recycler_refresh"></include>
+
+            <include layout="@layout/floatbutton_layout"></include>
+
+
+        </FrameLayout>
     </RelativeLayout>
 </LinearLayout>
